Fix button wrap

--- a/src/components/AddToPlaylist/AddToPlaylist.module.css
+++ b/src/components/AddToPlaylist/AddToPlaylist.module.css
@@ -148,6 +148,7 @@
 
 .newRow {
   display: flex;
+  flex-wrap: wrap;
   gap: 0.5rem;
 }
 
